--- a/UniHub/app/src/main/AndroidManifest.xml
+++ b/UniHub/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.UniHub"
         tools:targetApi="31">
         <activity
+            android:name=".ManterInfoDisciplina"
+            />
+        <activity
             android:name=".DisciplinasActivity"
             android:exported="true">
             <intent-filter>
