configurações pra buildar

--- a/UniHub/app/src/main/AndroidManifest.xml
+++ b/UniHub/app/src/main/AndroidManifest.xml
@@ -10,28 +10,16 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.UniHub"
         tools:targetApi="31">
-
         <activity
             android:name=".MainActivity"
-<<<<<<< Updated upstream
-            android:exported="true">
-=======
             android:exported="true"
-            android:theme="@style/Theme.UniHub">
->>>>>>> Stashed changes
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"> <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
         </activity>
 
-        <activity
-            android:name=".ui.ManterDisciplina.ManterInfoDisciplina"
-            />
-        <activity
-            android:name=".ui.ListarDisciplinas.DisciplinasActivity"
-            /> </application>
+    </application>
 
 </manifest>
