--- a/UniHub/gradle/libs.versions.toml
+++ b/UniHub/gradle/libs.versions.toml
@@ -1,48 +1,30 @@
+# libs.versions.toml
+
 [versions]
-<<<<<<< Updated upstream
-agp = "8.10.0"
-kotlin = "2.0.21"
-coreKtx = "1.16.0"
-junit = "4.13.2"
-junitVersion = "1.2.1"
-espressoCore = "3.6.1"
-appcompat = "1.7.0"
-material = "1.12.0"
-activity = "1.10.1"
-constraintlayout = "2.2.1"
-
-[libraries]
-=======
-# Core e Android Gradle Plugin
 agp = "8.9.1"
-kotlin = "2.0.0"
-coreKtx = "1.13.1"
+kotlin = "2.0.21"
+kotlinCompilerExtension = "1.5.14"
+viewModelCompose = "2.8.0"
+lifecycleRuntimeKtx = "2.8.0"
+desugarJdkLibs = "2.0.4"
+coreKtx = "1.16.0"
 appcompat = "1.7.0"
-
-# Dependências do Jetpack Compose
 activityCompose = "1.9.0"
 composeBom = "2024.06.00"
-kotlinCompilerExtension = "1.5.14"
 navigationCompose = "2.7.7"
 materialIconsExtended = "1.6.8"
-
-# Dependências de Views (se ainda precisar delas)
 materialViews = "1.12.0"
 constraintlayout = "2.1.4"
 recyclerview = "1.3.2"
-
-# Testes
 junit = "4.13.2"
-junitVersion = "1.2.1"
+androidxJunit = "1.2.1"
 espressoCore = "3.6.1"
+retrofit = "2.9.0"
+retrofit-gson-converter = "2.9.0"
 
 [libraries]
-#Core e AppCompat
->>>>>>> Stashed changes
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
-
-#Jetpack Compose
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
 androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
 androidx-ui = { group = "androidx.compose.ui", name = "ui" }
@@ -51,28 +33,33 @@ androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIconsExtended"}
-
-#Navegação com Compose
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
+androidx-lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "viewModelCompose" }
+androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
+desugar-jdk-libs = { group = "com.android.tools", name = "desugar_jdk_libs", version.ref = "desugarJdkLibs" }
 
-#Sistema de Views (manter se tiver telas em XML)
+androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
+androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
+
+retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
+retrofit-converter-gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofit-gson-converter" }
+
 material = { group = "com.google.android.material", name = "material", version.ref = "materialViews" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 androidx-recyclerview = { module = "androidx.recyclerview:recyclerview", version.ref = "recyclerview" }
-
-# Testes
 junit = { group = "junit", name = "junit", version.ref = "junit" }
-androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
+androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidxJunit" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
-androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
-androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-# Plugin necessário para o compilador do Compose
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 
 [bundles]
-# Agrupa as dependências mais comuns do Compose para facilitar a importação
-compose = ["androidx.ui", "androidx.ui.graphics", "androidx.material3", "androidx.ui.tooling.preview"]
+compose = [
+    "androidx.ui",
+    "androidx.ui.graphics",
+    "androidx.material3",
+    "androidx.ui.tooling.preview"
+]
