--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,9 @@
 services:
   db:
     image: postgres:15
-    container_name: postgres_disciplina
+    container_name: unihub_db
     environment:
-      POSTGRES_DB: disciplina_db
+      POSTGRES_DB: unihub_db
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
     ports:
