--- a/UniHub/gradle/libs.versions.toml
+++ b/UniHub/gradle/libs.versions.toml
@@ -21,6 +21,7 @@ androidxJunit = "1.2.1"
 espressoCore = "3.6.1"
 retrofit = "2.9.0"
 retrofit-gson-converter = "2.9.0"
+runtimeLivedata = "1.8.3"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -50,6 +51,7 @@ androidx-recyclerview = { module = "androidx.recyclerview:recyclerview", version
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidxJunit" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
+androidx-runtime-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata", version.ref = "runtimeLivedata" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
