--- a/backend/src/test/resources/application.properties
+++ b/backend/src/test/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.security.user.name=admin
+spring.security.user.password=admin
+spring.security.user.roles=ADMIN
