--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,6 +7,6 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.application.name=backend
-spring.security.user.name=admin
-spring.security.user.password=admin
+spring.security.user.name=teste@teste.com
+spring.security.user.password=teste123
 spring.security.user.roles=ADMIN
