--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -22,6 +22,13 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
+	implementation 'com.google.api-client:google-api-client:2.6.0'
+    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
+	implementation 'com.google.http-client:google-http-client-gson:1.43.3'
+	implementation 'com.google.http-client:google-http-client-jackson2:1.43.3'
+
+
+
 
     implementation 'org.springframework.boot:spring-boot-starter-security'	
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
