--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -29,6 +29,8 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.connectiontimeout=10000
 spring.mail.properties.mail.smtp.timeout=10000
 spring.mail.properties.mail.smtp.writetimeout=10000
+google.oauth.client-id=YOUR_WEB_CLIENT_ID.apps.googleusercontent.com
+
 
 # ========= Reset por Deep Link via GitHub Pages =========
 app.reset.base-uri=https://vanessabughay.github.io/UniHub/reset.html
