notificação com erro (avaliação não está notificando)

--- a/UniHub/app/src/main/AndroidManifest.xml
+++ b/UniHub/app/src/main/AndroidManifest.xml
@@ -44,6 +44,11 @@
             android:enabled="true"
             android:exported="false" />
 
+        <receiver
+            android:name=".notifications.EvaluationReminderNotificationReceiver"
+            android:enabled="true"
+            android:exported="false" />
+
     </application>
 
 </manifest>
