--- a/UniHub/app/src/main/AndroidManifest.xml
+++ b/UniHub/app/src/main/AndroidManifest.xml
@@ -49,6 +49,11 @@
             android:enabled="true"
             android:exported="false" />
 
+        <receiver
+            android:name=".notifications.TaskNotificationReceiver"
+            android:enabled="true"
+            android:exported="false" />
+
 
 
     </application>
