Email Usuario não Cadastrado

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -34,3 +34,6 @@ google.oauth.client-id=314323090083-t8vq1e591n8tcrcmu53f0b8ieb39piqt.apps.google
 
 # ========= Reset por Deep Link via GitHub Pages =========
 app.reset.base-uri=https://vanessabughay.github.io/UniHub/reset.html
+
+# ========= Convite por e-mail =========
+app.invite.apk-url=${APP_INVITE_APK_URL:}
