--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -37,3 +37,5 @@ app.reset.base-uri=https://vanessabughay.github.io/UniHub/reset.html
 
 # ========= Convite por e-mail =========
 app.invite.apk-url=${APP_INVITE_APK_URL:}
+app.mail.from=${APP_MAIL_FROM:}
+app.mail.from-name=${APP_MAIL_FROM_NAME:UniHub}
