Calendario Adicionando API

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -30,7 +30,9 @@ spring.mail.properties.mail.smtp.connectiontimeout=10000
 spring.mail.properties.mail.smtp.timeout=10000
 spring.mail.properties.mail.smtp.writetimeout=10000
 google.oauth.client-id=314323090083-t8vq1e591n8tcrcmu53f0b8ieb39piqt.apps.googleusercontent.com
-
+google.oauth.client-secret=${GOOGLE_OAUTH_CLIENT_SECRET:}
+google.oauth.calendar-redirect-uri=${GOOGLE_CALENDAR_REDIRECT_URI:postmessage}
+google.calendar.application-name=UniHub
 
 # ========= Reset por Deep Link via GitHub Pages =========
 app.reset.base-uri=https://vanessabughay.github.io/UniHub/reset.html
