Notificação solicitação de contato

--- a/UniHub/app/src/main/AndroidManifest.xml
+++ b/UniHub/app/src/main/AndroidManifest.xml
@@ -60,6 +60,10 @@
             android:name=".notifications.CompartilhamentoNotificationActionReceiver"
             android:enabled="true"
             android:exported="false" />
+        <receiver
+            android:name=".notifications.ContatoNotificationActionReceiver"
+            android:enabled="true"
+            android:exported="false" />
 
     </application>
 
